--- a/style.css
+++ b/style.css
@@ -1,194 +1,252 @@
 * {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
 
 html,
 body {
-  overflow: hidden; }
+	overflow: hidden;
+}
 
 a {
-  text-decoration: none; }
+	text-decoration: none;
+}
 
 body {
-  margin: 0;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
+	margin: 0;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 
 canvas {
-  width: 100%;
-  height: 100%;
-  cursor: crosshair; }
+	width: 100%;
+	height: 100%;
+	cursor: crosshair;
+}
 
 .text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  color: rgba(15, 15, 15, 0.8);
-  pointer-events: none; }
-  .text .title {
-    color: rgba(15, 15, 15, 0.8);
-    pointer-events: none;
-    font-size: 4.5em;
-    margin: 0;
-    font-weight: 900;
-    letter-spacing: 0.05em;
-    display: grid;
-    grid-auto-flow: column; }
-  .text .letter {
-    line-height: 1em;
-    pointer-events: none;
-    -webkit-animation: pulse 15s ease-in-out infinite;
-    animation: pulse 15s ease-in-out infinite; }
-  .text .letter:nth-child(1) {
-    -webkit-animation-delay: 50ms;
-    animation-delay: 50ms; }
-  .text .letter:nth-child(2) {
-    -webkit-animation-delay: 100ms;
-    animation-delay: 100ms; }
-  .text .letter:nth-child(3) {
-    -webkit-animation-delay: 150ms;
-    animation-delay: 150ms; }
-  .text .letter:nth-child(4) {
-    -webkit-animation-delay: 200ms;
-    animation-delay: 200ms; }
-  .text .letter:nth-child(5) {
-    -webkit-animation-delay: 250ms;
-    animation-delay: 250ms; }
-  .text .letter:nth-child(6) {
-    -webkit-animation-delay: 300ms;
-    animation-delay: 300ms; }
-  .text .letter:nth-child(7) {
-    -webkit-animation-delay: 350ms;
-    animation-delay: 350ms; }
-  .text .letter:nth-child(8) {
-    -webkit-animation-delay: 400ms;
-    animation-delay: 400ms; }
-  .text .letter:nth-child(9) {
-    -webkit-animation-delay: 450ms;
-    animation-delay: 450ms; }
-  .text .letter:nth-child(10) {
-    -webkit-animation-delay: 500ms;
-    animation-delay: 500ms; }
-  .text .letter:nth-child(11) {
-    -webkit-animation-delay: 550ms;
-    animation-delay: 550ms; }
-  .text .letter:nth-child(12) {
-    -webkit-animation-delay: 600ms;
-    animation-delay: 600ms; }
-  .text .letter:nth-child(13) {
-    -webkit-animation-delay: 650ms;
-    animation-delay: 650ms; }
-  .text .instructions {
-    position: relative;
-    text-align: center;
-    display: inline-block;
-    pointer-events: none;
-    width: 100%;
-    margin-top: 1em;
-    font-weight: 500;
-    -webkit-animation: fade-out 10s ease-out;
-    animation: fade-out 10s ease-out;
-    -webkit-animation-delay: 10s;
-    animation-delay: 10s;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-    text-transform: uppercase; }
-  .text .social-icons {
-    font-size: 1.5em;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    margin-top: 1em;
-    pointer-events: none; }
-    .text .social-icons a {
-      cursor: pointer;
-      pointer-events: all;
-      margin-left: 1em; }
-      .text .social-icons a:first-child {
-        margin-left: 0; }
-      .text .social-icons a:nth-child(1) svg {
-        -webkit-animation-delay: calc(100ms + 50ms);
-        animation-delay: calc(100ms + 50ms); }
-      .text .social-icons a:nth-child(2) svg {
-        -webkit-animation-delay: calc(100ms + 100ms);
-        animation-delay: calc(100ms + 100ms); }
-      .text .social-icons a:nth-child(3) svg {
-        -webkit-animation-delay: calc(100ms + 150ms);
-        animation-delay: calc(100ms + 150ms); }
-      .text .social-icons a:nth-child(4) svg {
-        -webkit-animation-delay: calc(100ms + 200ms);
-        animation-delay: calc(100ms + 200ms); }
-      .text .social-icons a:nth-child(5) svg {
-        -webkit-animation-delay: calc(100ms + 250ms);
-        animation-delay: calc(100ms + 250ms); }
-      .text .social-icons a svg {
-        -webkit-animation: pulse 15s ease-in-out infinite;
-        animation: pulse 15s ease-in-out infinite;
-        -webkit-transition: 0.5s ease-in;
-        -o-transition: 0.5s ease-in;
-        transition: 0.5s ease-in; }
-      .text .social-icons a.twitter:hover svg {
-        color: #1da1f2; }
-  .text .twitter:hover svg {
-    color: #1da1f2 !important; }
-  .text .instagram:hover svg {
-    color: #e1306c; }
-  .text .github:hover svg {
-    color: #ffffff; }
-  .text .medium:hover svg {
-    color: #00ab6c; }
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	color: rgba(15, 15, 15, 0.8);
+	pointer-events: none;
+}
+.text .title {
+	color: rgba(15, 15, 15, 0.8);
+	pointer-events: none;
+	font-size: 4.5em;
+	margin: 0;
+	font-weight: 900;
+	letter-spacing: 0.05em;
+	display: grid;
+	grid-auto-flow: column;
+}
+.text .letter {
+	line-height: 1em;
+	pointer-events: none;
+	-webkit-animation: pulse 15s ease-in-out infinite;
+	animation: pulse 15s ease-in-out infinite;
+}
+.text .letter:nth-child(1) {
+	-webkit-animation-delay: 50ms;
+	animation-delay: 50ms;
+}
+.text .letter:nth-child(2) {
+	-webkit-animation-delay: 100ms;
+	animation-delay: 100ms;
+}
+.text .letter:nth-child(3) {
+	-webkit-animation-delay: 150ms;
+	animation-delay: 150ms;
+}
+.text .letter:nth-child(4) {
+	-webkit-animation-delay: 200ms;
+	animation-delay: 200ms;
+}
+.text .letter:nth-child(5) {
+	-webkit-animation-delay: 250ms;
+	animation-delay: 250ms;
+}
+.text .letter:nth-child(6) {
+	-webkit-animation-delay: 300ms;
+	animation-delay: 300ms;
+}
+.text .letter:nth-child(7) {
+	-webkit-animation-delay: 350ms;
+	animation-delay: 350ms;
+}
+.text .letter:nth-child(8) {
+	-webkit-animation-delay: 400ms;
+	animation-delay: 400ms;
+}
+.text .letter:nth-child(9) {
+	-webkit-animation-delay: 450ms;
+	animation-delay: 450ms;
+}
+.text .letter:nth-child(10) {
+	-webkit-animation-delay: 500ms;
+	animation-delay: 500ms;
+}
+.text .letter:nth-child(11) {
+	-webkit-animation-delay: 550ms;
+	animation-delay: 550ms;
+}
+.text .letter:nth-child(12) {
+	-webkit-animation-delay: 600ms;
+	animation-delay: 600ms;
+}
+.text .letter:nth-child(13) {
+	-webkit-animation-delay: 650ms;
+	animation-delay: 650ms;
+}
+.text .instructions {
+	position: relative;
+	text-align: center;
+	display: inline-block;
+	pointer-events: none;
+	width: 100%;
+	margin-top: 1em;
+	font-weight: 500;
+	-webkit-animation: fade-out 10s ease-out;
+	animation: fade-out 10s ease-out;
+	-webkit-animation-delay: 10s;
+	animation-delay: 10s;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+	text-transform: uppercase;
+}
+.text .social-icons {
+	font-size: 1.5em;
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	margin-top: 1em;
+	pointer-events: none;
+}
+.text .social-icons a {
+	cursor: pointer;
+	pointer-events: all;
+	margin-left: 1em;
+	color: rgba(15, 15, 15, 0.8);
+}
+.text .social-icons a:first-child {
+	margin-left: 0;
+}
+.text .social-icons a:nth-child(1) {
+	-webkit-animation-delay: calc(100ms + 50ms);
+	animation-delay: calc(100ms + 50ms);
+}
+.text .social-icons a:nth-child(2) {
+	-webkit-animation-delay: calc(100ms + 100ms);
+	animation-delay: calc(100ms + 100ms);
+}
+.text .social-icons a:nth-child(3) {
+	-webkit-animation-delay: calc(100ms + 150ms);
+	animation-delay: calc(100ms + 150ms);
+}
+.text .social-icons a:nth-child(4) {
+	-webkit-animation-delay: calc(100ms + 200ms);
+	animation-delay: calc(100ms + 200ms);
+}
+.text .social-icons a:nth-child(5) {
+	-webkit-animation-delay: calc(100ms + 250ms);
+	animation-delay: calc(100ms + 250ms);
+}
+.text .social-icons a {
+	-webkit-animation: pulse 15s ease-in-out infinite;
+	animation: pulse 15s ease-in-out infinite;
+	-webkit-transition: 0.5s ease-in;
+	-o-transition: 0.5s ease-in;
+	transition: 0.5s ease-in;
+}
+.text .social-icons a.twitter:hover svg {
+	color: #1da1f2;
+}
+.text .twitter:hover svg {
+	color: #1da1f2 !important;
+}
+.text .instagram:hover svg {
+	color: #e1306c;
+}
+.text .github:hover svg {
+	color: #ffffff;
+}
+.text .medium:hover svg {
+	color: #00ab6c;
+}
 
 @media screen and (max-width: 768px) {
-  .text .title {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-flow: row;
-    font-size: 5em; }
-  .text .space {
-    display: none; } }
+	.text .title {
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-auto-flow: row;
+		font-size: 5em;
+	}
+	.text .space {
+		display: none;
+	}
+}
 
 @-webkit-keyframes fade-out {
-  from {
-    opacity: 1;
-    display: inline-block; }
-  to {
-    opacity: 0;
-    display: none; } }
+	from {
+		opacity: 1;
+		display: inline-block;
+	}
+	to {
+		opacity: 0;
+		display: none;
+	}
+}
 
 @keyframes fade-out {
-  from {
-    opacity: 1;
-    display: inline-block; }
-  to {
-    opacity: 0;
-    display: none; } }
+	from {
+		opacity: 1;
+		display: inline-block;
+	}
+	to {
+		opacity: 0;
+		display: none;
+	}
+}
 
 @-webkit-keyframes pulse {
-  0% {
-    color: rgba(15, 15, 15, 0.8); }
-  45% {
-    color: rgba(15, 15, 15, 0.8); }
-  50% {
-    color: rgba(255, 255, 255, 0.5); }
-  55% {
-    color: rgba(15, 15, 15, 0.8); }
-  100% {
-    color: rgba(15, 15, 15, 0.8); } }
+	0% {
+		color: rgba(15, 15, 15, 0.8);
+	}
+	45% {
+		color: rgba(15, 15, 15, 0.8);
+	}
+	50% {
+		color: rgba(255, 255, 255, 0.5);
+	}
+	55% {
+		color: rgba(15, 15, 15, 0.8);
+	}
+	100% {
+		color: rgba(15, 15, 15, 0.8);
+	}
+}
 
 @keyframes pulse {
-  0% {
-    color: rgba(15, 15, 15, 0.8); }
-  45% {
-    color: rgba(15, 15, 15, 0.8); }
-  50% {
-    color: rgba(255, 255, 255, 0.5); }
-  55% {
-    color: rgba(15, 15, 15, 0.8); }
-  100% {
-    color: rgba(15, 15, 15, 0.8); } }
+	0% {
+		color: rgba(15, 15, 15, 0.8);
+	}
+	45% {
+		color: rgba(15, 15, 15, 0.8);
+	}
+	50% {
+		color: rgba(255, 255, 255, 0.5);
+	}
+	55% {
+		color: rgba(15, 15, 15, 0.8);
+	}
+	100% {
+		color: rgba(15, 15, 15, 0.8);
+	}
+}
