--- a/static/global.css
+++ b/static/global.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: var(--body-font);
-  font-size: 14px;
+  font-size: clamp(14px, 10vw, 16px);
   line-height: 1.5;
   color: var(--text);
   background: linear-gradient(
@@ -20,7 +20,6 @@ h5,
 h6 {
   margin: 0;
   font-weight: 500;
-  line-height: 1;
 }
 
 h1 {
@@ -31,10 +30,4 @@ h1 {
 a {
   color: var(--blue);
   text-decoration: none;
-}
-
-@media (min-width: 400px) {
-  body {
-    font-size: 16px;
-  }
 }
